[package]
name = "uckb-scanner-utils"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[[bin]]
name = "uckb-scanner"
path = "src/main.rs"

[dependencies]
kernel = { package = "uckb-scanner", version = "~0.1", path = "../kernel" }
uckb-jsonrpc-client = { git = "https://github.com/unofficial-ckb/uckb-jsonrpc-sdk.git", rev = "8119802" }
clap = { version = "~2.33", features = ["yaml"] }
failure = "~0.1"
property = "~0.3"
log = "~0.4"
pretty_env_logger = "~0.3"

[badges]
travis-ci = { repository = "unofficial-ckb/uckb-scanner" }
